--- a/src/Components/NameBlock/NameBlock.css
+++ b/src/Components/NameBlock/NameBlock.css
@@ -12,7 +12,7 @@
   font-size: 40px;
   font-family: fantasy;
   text-align: left;
-  padding-left: 25px;
+  padding-left: 35px;
   color: #a1aac7;
 }
 
