--- a/src/Components/SevenDayBlock/SevenDayBlock.css
+++ b/src/Components/SevenDayBlock/SevenDayBlock.css
@@ -4,7 +4,7 @@
   justify-content: center;
   align-items: center;
   height: 7em;
-  width: 25em;
+  width: 25.25em;
   margin-top: 25px;
   margin-right: auto;
   margin-left: auto;
