--- a/src/Components/WeatherAddon/WeatherAddon.css
+++ b/src/Components/WeatherAddon/WeatherAddon.css
@@ -1,20 +1,23 @@
 .daily-additional-block {
   display: flex;
-  margin-top: 12px;
   position: fixed;
 }
 
 .daily-additional-block-right {
   display: flex;
   margin-right: 30px;
-  margin-left: -6px;
+  margin-left: 10px;
 }
 
 .daily-additional-block-left {
   position: absolute;
-  right: 119%;
+  right: 117%;
 }
 
 .weather-details-icon {
   display: flex;
+}
+
+.tests {
+  margin-right: 12px;
 }
